css/main.css
/* ... */
.home h1,
.hide-all,
.hide {
	display: none;
}
img {
	width: 100%;
}
.single figure {
	margin: 2rem;
}
/* ========== END Basic Layout and Spacing ========== */
/* ========== Links Styles========== */
a:link {
	color: rgb(244,182,61);
}
a:hover {
    color: rgb( 228, 225, 221);
}
a:visited,
a:active {
	color: rgba(244,182,61,.8);
}
/* ========== END Link Styles ========== */
/* ========== Button Styles ========== */
button,
input#submit,
input[type="button"] {
    padding: 0.5rem;
}
button,
input#submit,
input[type="button"],
.button a:link,
.button a:visited {
    padding: 0.5rem;
    border-radius: 7px;
    border: solid 3px rgb(244, 182, 61);
    background: none;
    color: rgb(244, 182, 61);
    font-family: 'black-bamboo','Hind', sans-serif;
    transition: color 1s border 1s filter 0.5s;
    text-align: center;
    display:block;
}
button:hover,
input#submit:hover,
input[type="button"]:hover,
.button a:hover {
    color: rgb(63, 73, 64);
    border-color: rgb(63, 73, 64);
}
.button a:active,
input#submit:active,
input[type="button"]:active,
button:active {
    color: #000;
    border-color: rgb(2, 10, 16);
    filter: drop-shadow(0 0 5px #fff);
    transition: color 1s border 1s filter 0.5s;
}
.button a:link,
.button a:visited,
.button a:active {
    text-decoration: none;
}
/* ========== END Button Styles ========== */
/* ========== Nav Styles ========== */
nav ul {
	width: 100%;
	text-align: center;
	padding: 1% 0;
	margin: 0;
}
nav ul li {
	display: inline;
	padding: 0 2%;
    margin-left: 0
}
nav ul li a:link,
nav ul li a:visited {
	color: rgb(244,182,61);
	text-decoration: none;
}
nav ul li a:hover,
nav ul li a:active {
	color: rgb( 228, 225, 221);
    text-decoration: underline;
}
.main-menu {
    display: flex;
    align-items: center;
    justify-content: center;
}
nav {
    width: 100%;
}
/* ========== END Nav Styles ========== */
/* ======== Footer Styles ========*/
footer {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    grid-row: 5 / 6;
    grid-column: 1 / span 12;
}
footer p {
    margin: 1rem;
}
/* ========== END Footer Styles ========== */
/* ======== Hamburger Menu Styles ========*/
.hamburger,
.hamburger__close {
	display: none;
}
.mobile-nav_display ul {
  width: 75%;
  margin: auto;
  -webkit-padding-start: 0;
}
@media (max-width: 700px) {
	body {
		overflow-x: hidden;
	}
	.hamburger,
	.hamburger__close {
	  width: 2rem;
      height: 2rem;
      padding: 1rem;
	  position: fixed;
      top: 0.5rem;
      right: 0.5rem;
	  bottom: 1rem;
	  cursor: pointer;
	  display: block;
	  z-index: 9981;
      border-radius: 50%;
      background: rgba(2, 10, 16, 0.6);
      animation: spin-in 1s;
      box-sizing: content-box; /* Box-sizing will make it disappear */
	}
	.nav_hide {
	  display: none;
	}
	nav {
	  position: fixed;
	  width: 100%;
	  height: 100vh;
	  background-color: rgba(2,10, 16, 0.97);
	  top: 0;
	  z-index: 9980;
	  right: -105%;
	  opacity: 0;
	  transition: right 0.3s ease-in, opacity 0.25s ease-in;
	  display: block;
	}
	nav ul li {
	    display: block;
	    text-align: center;
		font-size: 1.2em;
        margin: 1em;
	}
	nav.mobile-nav_display {
	  right: 0 !important;
	  top: 0;
	  opacity: 1;
	  transition: right 0.3s ease-in, opacity 0.3s ease-in;
	  display: block;
	}
}
/* ======== END Hamburger Menu Styles ========*/
/* ========== Home Styles ========== */
section.splash p {
	width: 85%;
	margin: auto;
	text-align: center;
}
#container {
    margin: 1.5rem;
}
.home_call-to-action {
    width: 100%;
    position: absolute;
    top: calc(100vh - 8rem);
}
p.home_action_text a:link {
	text-decoration: none;
}
.home_action {
    width: 100%;
}
img.action {
	width: 8%;
	max-width: 40px;
}
img.thumb {
	max-width: 300px;
}
.logo {
	margin-top: 30%;
	width: 60%;
	max-width: 220px;
}
.bkg {
	background-image: url(../img/bkg.jpg);
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	min-height: 100vh;
    position: relative;
}
.tagline {
	font-family: 'Hind', sans-serif;
	font-size: 1.1rem;
	color: rgb( 228, 225, 221);
	margin: 10% 0 20%;
	text-align: center;
}
.home_action_text {
	font-size: 1.4rem;
}
.home_action
img.arrow-bounce {
	animation-name: arrow-bounce;
	animation-duration: 1s;
	animation-iteration-count: infinite;
	animation-direction: alternate;
}
/* ========== END Home Styles  ========== */
/* ========== Project Styles  ========== */
.single-projects h1,
.single h1 {
    margin: 1.1rem 0;
    font-size: 2.2rem;
}
.post-type-archive-projects article {
    padding-bottom: 5rem; /* Prevents img from covering skill icons */
}
img.pj_contact-icon {
    width: 4rem;
}
li.phone,
li.email {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-left: 0;
}
li.email a:link {
    color: rgb( 228, 225, 221);
}
.pj_view-more_thumbs article h3 {
	width: 100.5%; /* Fixes little gap in gradient */
	height: 6rem;
    padding: 1rem 0.5rem;
    position: absolute;
    top: 0;
    font-size: 1.1rem;
	background: -moz-linear-gradient(top, rgba(2,10,16,0.9) 0%, rgba(2,10,16,0.8) 60%, rgba(2,10,16,0) 100%);
	background: -webkit-linear-gradient(top, rgba(2,10,16,0.9) 0%,rgba(2,10,16,0.8) 60%,rgba(2,10,16,0) 100%);
	background: linear-gradient(to bottom, rgba(2,10,16,0.9) 0%,rgba(2,10,16,0.8) 60%,rgba(2,10,16,0) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6020a10', endColorstr='#00020a10',GradientType=0 );
}
.pj_view-more_thumbs article h3 a {
	width: 100%;
	height: 100%;
}
.single-projects .projects_skills {
    display: none;
}
/* ========== END Project Styles ========== */
/* ========== Blog Index Styles ========== */
.search-results main,
.blog main,
.post-type-archive-projects main {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
}
article {
    position: relative;
	overflow: hidden;
}
.search-results main article,
.blog main article {
    margin: 0.25% 0.5%;
	width: 100%;
}
/* ... */

